# t3-chat-clone

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  lib.rs  logger.rs  main.rs  state.rs
crates/backend/src/data/mongodb/: mod.rs
crates/backend/src/errors/: crypto.rs  mod.rs
crates/backend/src/errors/storage/: cache.rs  database.rs  mod.rs
crates/backend/src/middleware/: auth.rs
crates/backend/src/models/: mod.rs
crates/backend/src/payload/: mod.rs
crates/backend/src/payload/auth/: mod.rs
crates/backend/src/payload/chat/: mod.rs
crates/backend/src/payload/completion/: mod.rs
crates/backend/src/payload/memories/: mod.rs
crates/backend/src/payload/upload/: mod.rs
crates/backend/src/routes/: mod.rs
crates/backend/src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
crates/backend/src/routes/chats/: create.rs  delete.rs  list.rs  message.rs  messages.rs  mod.rs  rename.rs  share.rs  share_state.rs  state.rs  unshare.rs
crates/backend/src/routes/completion/: mod.rs  prompt.rs
crates/backend/src/routes/files/: list.rs  list_unsent.rs  mod.rs  remove.rs  stream.rs  upload.rs
crates/backend/src/routes/keys/: enroll.rs  list.rs  mod.rs  remove.rs
crates/backend/src/routes/memories/: list.rs  mod.rs  remove.rs
crates/backend/src/routes/users/: me.rs  (+1 more)
crates/backend/src/search/: mod.rs
crates/backend/src/state/: crypto.rs  database.rs  inference.rs  mod.rs
crates/backend/src/streaming/: mod.rs
crates/model/: Cargo.toml
crates/model/src/: chat.rs  key.rs  lib.rs  memory.rs  message.rs  session.rs  share.rs  upload.rs  user.rs
(+78 files in other folders)
