[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
openai-api-rs = "6.0.6"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
