[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ai = { path = "../ai" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
flume = { version = "0.11.1", features = ["async"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
anyhow = "1.0.98"
tracing-appender = "0.2.3"
mongodb = "3.2.3"
async-trait = "0.1.88"
validator = { version = "0.20.0", features = ["derive"] }
model = { path = "../model" }
argon2 = "0.5.3"
