[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
mongodb = "3.2.3"
redis-om = { version = "0.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
